--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,9 +13,8 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="header-container">
-            <header class="header">
-                <div class="header-nav-container">
+        <header class="header">
+            <div class="header-container">
                     <nav class="header-nav">
                         <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
                         <ul>
@@ -29,8 +29,6 @@
                             </li>
                         </ul>
                     </nav>
-                </div>
-                <div class="header-address-container">
                     <address class="header-address">
                         <ul>
                             <li>
@@ -41,9 +39,8 @@
                             </li>
                         </ul>
                     </address>
-                </div>
-            </header>
-        </div>
+            </div>
+        </header>
         <Main>
             <!--introduction -->
             <section class="main-section-one">
