--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-container">
                     <nav class="header-nav">
                         <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
-                        <ul>
+                        <ul class="header-nav-list">
                             <li>
                                 <a class="header-nav-page" href="./index.html">Studio</a> 
                             </li>
@@ -30,7 +30,7 @@
                         </ul>
                     </nav>
                     <address class="header-address">
-                        <ul>
+                        <ul class="header-address-list">
                             <li>
                                 <a class="header-address-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
                             </li>
