--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="header-container">
+            <div class="container">
                     <nav class="header-nav">
                         <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
                         <ul class="header-nav-list">
@@ -134,8 +134,10 @@
             </section>
         </Main>
         <footer class="footer-web">
-            <a class="footer-web-logo" href="./index.html">Web<span class="footer-web-logo-span">Studio</span></a>
-            <p class="footer-web-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <div class="container">
+                <a class="footer-web-logo" href="./index.html">Web<span class="footer-web-logo-span">Studio</span></a>
+                <p class="footer-web-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
         </footer>
     </div>
 </body>
