--- a/index.html
+++ b/index.html
@@ -13,39 +13,44 @@
 </head>
 <body>
     <header class="header">
-        <nav class="header-nav">
-            <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
-            <ul>
-                <li>
-                    <a class="header-nav-page" href="./index.html">Studio</a> 
-                </li>
-                <li>
-                    <a class="header-nav-page" href="">Portfolio</a>
-                </li>
-                <li>
-                    <a class="header-nav-page" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="header-address">
-            <ul>
-                <li>
-                    <a class="header-address-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="header-address-contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="conteiner">
+            <nav class="header-nav">
+                <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
+                <ul>
+                    <li>
+                        <a class="header-nav-page" href="./index.html">Studio</a> 
+                    </li>
+                    <li>
+                        <a class="header-nav-page" href="">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="header-nav-page" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="header-address">
+                <ul>
+                    <li>
+                        <a class="header-address-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="header-address-contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <Main>
         <!--introduction -->
         <section class="main-section-one">
-            <h1 class="main-section-one-title" >Effective Solutions for Your Business</h1>
-            <button class="main-section-one-button" type="button">Order Service</button>
-        </section>
+            <div class="conteiner">
+                <h1 class="main-section-one-title" >Effective Solutions for Your Business</h1>
+                <button class="main-section-one-button" type="button">Order Service</button>    
+            </div>
+       </section>
         <!--foundations of business-->
         <section class=" main-section-two">
+           <div class="conteiner">
             <h2 class="main-section-two-title" >Foundations</h2>
             <ul>
                 <li>
@@ -65,9 +70,11 @@
                     <p class="main-section-two-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+           </div>
         </section>
         <!--our team-->
         <section class="main-section-three" >
+           <div class="conteiner">
             <h2 class="main-section-three-title" >Our Team</h2>
             <ul>
                 <li class="main-section-three-list">
@@ -91,9 +98,11 @@
                     <p class="main-section-three-text">UI Designer</p>
                 </li>
             </ul>
+           </div>
         </section>
         <!--Our Portfolio-->
         <section class="main-section-four">
+           <div class="conteiner">
             <h2 class="main-section-four-title">Our Portfolio</h2>
             <ul>
                 <li>
@@ -127,12 +136,14 @@
                     <p class="main-section-four-text">Marketing</p>
                 </li>
             </ul>
-
+           </div>
         </section>
     </Main>
     <footer class="footer-web">
-        <a class="footer-web-logo" href="./index.html">Web<span class="footer-web-logo-span">Studio</span></a>
-        <p class="footer-web-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="conteiner">
+            <a class="footer-web-logo" href="./index.html">Web<span class="footer-web-logo-span">Studio</span></a>
+            <p class="footer-web-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 
 </body>
