--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="conteiner">
+        <div class="container">
             <nav class="header-nav">
                 <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
                 <ul>
@@ -43,14 +43,14 @@
     <Main>
         <!--introduction -->
         <section class="main-section-one">
-            <div class="conteiner">
+            <div class="container">
                 <h1 class="main-section-one-title" >Effective Solutions for Your Business</h1>
                 <button class="main-section-one-button" type="button">Order Service</button>    
             </div>
        </section>
         <!--foundations of business-->
         <section class=" main-section-two">
-           <div class="conteiner">
+           <div class="container">
             <h2 class="main-section-two-title" >Foundations</h2>
             <ul>
                 <li>
@@ -74,7 +74,7 @@
         </section>
         <!--our team-->
         <section class="main-section-three" >
-           <div class="conteiner">
+           <div class="container">
             <h2 class="main-section-three-title" >Our Team</h2>
             <ul>
                 <li class="main-section-three-list">
@@ -102,7 +102,7 @@
         </section>
         <!--Our Portfolio-->
         <section class="main-section-four">
-           <div class="conteiner">
+           <div class="container">
             <h2 class="main-section-four-title">Our Portfolio</h2>
             <ul>
                 <li>
@@ -140,7 +140,7 @@
         </section>
     </Main>
     <footer class="footer-web">
-        <div class="conteiner">
+        <div class="container">
             <a class="footer-web-logo" href="./index.html">Web<span class="footer-web-logo-span">Studio</span></a>
             <p class="footer-web-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
