--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <!--foundations of business-->
         <section class=" main-section-two">
            <div class="container">
-            <h2 class="main-section-two-title" >Foundations</h2>
-            <ul>
+            <h2 class="visually-hidden" ></h2>
+            <ul class="main-section-two-list">
                 <li>
                     <h3 class="main-section-two-titlename" >Strategy</h3>
                     <p class="main-section-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
