--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
            <div class="container">
             <h2 class="visually-hidden" ></h2>
             <ul class="main-section-two-list">
-                <li>
+                <li class="main-section-two-list-page">
                     <h3 class="main-section-two-titlename" >Strategy</h3>
                     <p class="main-section-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
+                <li class="main-section-two-list-page">
                     <h3 class="main-section-two-titlename">Punctuality</h3>
                     <p class="main-section-two-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
+                <li class="main-section-two-list-page">
                     <h3 class="main-section-two-titlename">Diligence</h3>
                     <p class="main-section-two-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
+                <li class="main-section-two-list-page">
                     <h3 class="main-section-two-titlename">Technologies</h3>
                     <p class="main-section-two-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -76,26 +76,36 @@
         <section class="main-section-three" >
            <div class="container">
             <h2 class="main-section-three-title" >Our Team</h2>
-            <ul>
+            <ul class="main-section-three-list-title">
                 <li class="main-section-three-list">
                     <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
+                    <div class="main-section-three-workers">
+                        <h3 class="main-section-three-titlename">Mark Guerrero</h3>
+                        <p class="main-section-three-text" >Product Designer</p>
+                    </div>
                     <h3 class="main-section-three-titlename">Mark Guerrero</h3>
                     <p class="main-section-three-text" >Product Designer</p>
                 </li>
                 <li class="main-section-three-list">
                     <img src="./images/img-2.jpg" alt="Tom Ford" width="264">
-                    <h3 class="main-section-three-titlename">Tom Ford</h3>
-                    <p class="main-section-three-text">Frontend Developer</p>
+                    <div class="main-section-three-workers">
+                        <h3 class="main-section-three-titlename">Tom Ford</h3>
+                        <p class="main-section-three-text">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="main-section-three-list">
                     <img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
-                    <h3 class="main-section-three-titlename">Camila Garcia</h3>
-                    <p class="main-section-three-text">Marketing</p>
+                    <div class="main-section-three-workers">
+                        <h3 class="main-section-three-titlename">Camila Garcia</h3>
+                        <p class="main-section-three-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="main-section-three-list">
                     <img src="./images/img.jpg" alt="Daniel Wilson" width="264">
-                    <h3 class="main-section-three-titlename">Daniel Wilson</h3>
-                    <p class="main-section-three-text">UI Designer</p>
+                    <div class="main-section-three-workers">
+                        <h3 class="main-section-three-titlename">Daniel Wilson</h3>
+                        <p class="main-section-three-text">UI Designer</p>
+                    </div>
                 </li>
             </ul>
            </div>
@@ -104,36 +114,48 @@
         <section class="main-section-four">
            <div class="container">
             <h2 class="main-section-four-title">Our Portfolio</h2>
-            <ul>
-                <li>
+            <ul class="main-section-four-pages-title">
+                <li class="main-section-four-list">
                     <img src="./images/img10.jpg" alt="Banking App" width="360">
-                    <h3 class="main-section-four-titlename" >Banking App</h3>
-                    <p class="main-section-four-text">App</p>
+                    <div class="main-section-four-list-category">
+                        <h3 class="main-section-four-titlename" >Banking App</h3>
+                        <p class="main-section-four-text">App</p>
+                    </div>
                 </li>
-                <li>
+                <li class="main-section-four-list">
                     <img src="./images/img5.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="main-section-four-titlename">Cashless Payment</h3>
-                    <p class="main-section-four-text">Marketing</p>
+                    <div class="main-section-four-list-category">
+                        <h3 class="main-section-four-titlename">Cashless Payment</h3>
+                        <p class="main-section-four-text">Marketing</p>
+                    </div>
                 </li>               
-                <li>
+                <li class="main-section-four-list">
                     <img src="./images/img6.jpg" alt="Meditation App" width="360">
-                    <h3 class="main-section-four-titlename">Meditation App</h3>
-                    <p class="main-section-four-text">App</p>
+                    <div class="main-section-four-list-category">
+                        <h3 class="main-section-four-titlename">Meditation App</h3>
+                        <p class="main-section-four-text">App</p>
+                    </div>
                 </li>                
-                <li>
+                <li class="main-section-four-list">
                     <img src="./images/img7.jpg" alt="Taxi Service" width="360">
-                    <h3 class="main-section-four-titlename">Taxi Service</h3>
-                    <p class="main-section-four-text">Marketing</p>
+                    <div class="main-section-four-list-category">
+                        <h3 class="main-section-four-titlename">Taxi Service</h3>
+                        <p class="main-section-four-text">Marketing</p>
+                    </div>
                 </li>                
-                <li>
+                <li class="main-section-four-list">
                     <img src="./images/img9.jpg" alt="Screen Illustrations" width="360">
-                    <h3 class="main-section-four-titlename">Screen Illustrations</h3>
-                    <p class="main-section-four-text">Design</p>
+                    <div class="main-section-four-list-category">
+                        <h3 class="main-section-four-titlename">Screen Illustrations</h3>
+                        <p class="main-section-four-text">Design</p>
+                    </div>
                 </li>                
-                <li>
+                <li class="main-section-four-list">
                     <img src="./images/img8.jpg" alt="Banking App" width="360">
-                    <h3 class="main-section-four-titlename">Online Courses</h3>
-                    <p class="main-section-four-text">Marketing</p>
+                    <div class="main-section-four-list-category">
+                        <h3 class="main-section-four-titlename">Online Courses</h3>
+                        <p class="main-section-four-text">Marketing</p>
+                    </div>
                 </li>
             </ul>
            </div>
