--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--foundations of business-->
         <section class=" main-section-two">
            <div class="container">
-            <h2 class="visually-hidden" ></h2>
+            <h2 class="visually-hidden" >Intro</h2>
             <ul class="main-section-two-list">
                 <li class="main-section-two-list-page">
                     <h3 class="main-section-two-titlename" >Strategy</h3>
@@ -83,8 +83,6 @@
                         <h3 class="main-section-three-titlename">Mark Guerrero</h3>
                         <p class="main-section-three-text" >Product Designer</p>
                     </div>
-                    <h3 class="main-section-three-titlename">Mark Guerrero</h3>
-                    <p class="main-section-three-text" >Product Designer</p>
                 </li>
                 <li class="main-section-three-list">
                     <img src="./images/img-2.jpg" alt="Tom Ford" width="264">
