--- a/index.html
+++ b/index.html
@@ -14,37 +14,39 @@
 <body>
     <header class="header">
         <div class="container">
-            <nav class="header-nav">
-                <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
-                <ul class="header-nav-list">
-                    <li>
-                        <a class="header-nav-page" href="./index.html">Studio</a> 
-                    </li>
-                    <li>
-                        <a class="header-nav-page" href="">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="header-nav-page" href="">Contacts</a>
-                    </li>
-                </ul>
-            </nav>
-            <address class="header-address">
-                <ul class="header-address-list">
-                    <li>
-                        <a class="header-address-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a class="header-address-contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                    </li>
-                </ul>
-            </address>
+            <div class="header-container">
+                <nav class="header-nav">
+                    <a class="header-nav-logo" href="./index.html">Web<span class="header-nav-logo-span">Studio</span></a>
+                    <ul class="header-nav-list">
+                        <li>
+                            <a class="header-nav-page" href="./index.html">Studio</a> 
+                        </li>
+                        <li>
+                            <a class="header-nav-page" href="">Portfolio</a>
+                        </li>
+                        <li>
+                            <a class="header-nav-page" href="">Contacts</a>
+                        </li>
+                    </ul>
+                </nav>
+                <address class="header-address">
+                    <ul class="header-address-list">
+                        <li>
+                            <a class="header-address-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a class="header-address-contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </div>
     </header>
     <Main>
         <!--introduction -->
         <section class="main-section-one">
             <div class="container">
-                <h1 class="main-section-one-title" >Effective Solutions for Your Business</h1>
+                <h1 cla ss="main-section-one-title" >Effective Solutions for Your Business</h1>
                 <button class="main-section-one-button" type="button">Order Service</button>    
             </div>
        </section>
